--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint-config-airbnb": "^19.0.4",
-    "mini-css-extract-plugin": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
-    "file-loader": "^6.0.0",
     "css-loader": "^5.1.0",
     "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "prettier": "2.2.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.37.1",
@@ -37,6 +38,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2"
   },
