fix: eslint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,12 +10,37 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js", ".jsx", ".ts", ".tsx"
+        ],
+        "moduleDirectory": [
+          "node_modules", "src/"
+        ]
+      }
+    }
+  },
   "env": {
     "es6": true,
     "browser": true,
     "node": true
   },
   "rules": {
-    "indent": ["error", 4]
+    "indent": ["error", 4],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "": "never",
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": ["error"]
   }
 }
