--- a/package.json
+++ b/package.json
@@ -1,49 +1,47 @@
 {
-  "name": "coinmarket",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
-  "scripts": {
-    "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
-    "build": "webpack --config ./webpack.config.js --env mode=prod",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DzinaKor/CoinMarket.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.1.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^5.2.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "prettier": "2.2.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-merge": "^5.7.3"
-  },
-  "dependencies": {
-
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2"
-  },
-  "bugs": {
-    "url": "https://github.com/DzinaKor/CoinMarket/issues"
-  },
-  "homepage": "https://github.com/DzinaKor/CoinMarket#readme"
+    "name": "coinmarket",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.ts",
+    "scripts": {
+        "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
+        "build": "webpack --config ./webpack.config.js --env mode=prod",
+        "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DzinaKor/CoinMarket.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.5.0",
+        "@typescript-eslint/parser": "^5.5.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^7.0.0",
+        "css-loader": "^5.1.0",
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-webpack-plugin": "^3.1.1",
+        "file-loader": "^6.0.0",
+        "html-webpack-plugin": "^5.2.0",
+        "mini-css-extract-plugin": "^2.6.1",
+        "prettier": "2.2.1",
+        "style-loader": "^2.0.0",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.2",
+        "webpack": "^5.37.1",
+        "webpack-cli": "^4.5.0",
+        "webpack-dev-server": "^4.6.0",
+        "webpack-merge": "^5.7.3"
+    },
+    "bugs": {
+        "url": "https://github.com/DzinaKor/CoinMarket/issues"
+    },
+    "homepage": "https://github.com/DzinaKor/CoinMarket#readme"
 }
