--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.ts",
     "scripts": {
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
-        "build": "webpack --config ./webpack.config.js --env mode=prod",
+        "build": "webpack watch --config ./webpack.config.js --env mode=prod",
         "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
     },
     "repository": {
